# ZK_auth

./: CMakeLists.txt  README.md  channel.hpp  fair_prover.hpp  main.cpp  message.hpp  prover.hpp  verificator.hpp
src/: channel.hpp  fair_prover.hpp  message.hpp  prover.hpp  verificator.hpp
src/primality/: primality.cpp  primality.hpp
src/util/: N.hpp  bigint.cpp  bigint.hpp  fft.hpp  moduled_bigint.cpp  moduled_bigint.hpp  rand.cpp  rand.hpp
tests/: bigint_arithm_tests.hpp  bigint_equalities_tests.hpp  bigint_random_tests.hpp  bigint_test_helper.hpp  bigint_types_tests.hpp  moduled_bigint_arithm_tests.hpp  moduled_bigint_test_helper.hpp  primality_tests.hpp  test.cpp  test_helper.hpp
util/: bigint.hpp  rand.hpp
